fixed header height squash

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,11 +2,13 @@
 @use "./sass/mixins" as mixin;
 
 .App {
-  text-align: center;
   @include mixin.flex-column;
   align-items: stretch;
   width: 100%;
   height: 100vh;
+  > * {
+    flex-shrink: 0;
+  }
   .main {
     flex: 1;
     @include mixin.flex-column;
